HSCP/test/AnalysisCode/2024_04_09.txt
ROOT_prompt_2:1:9: error: redefinition of 'dummy'
TString dummy = makeshared.ReplaceAll("-Wshadow ", " -std=c++0x -D__USE_XOPEN2K8 ");
        ^
ROOT_prompt_1:1:9: note: previous definition is here
TString dummy = makeshared.ReplaceAll("-W ", "-Wno-deprecated-declarations -Wno-deprecated -Wno-unused-local-typedefs ");
        ^
Compilling with the following arguments: cd $BuildDir ; g++ -c $Opt -D__ROOFIT_NOBANNER -pipe -m64 -Wno-deprecated-declarations -Wno-deprecated -Wno-unused-local-typedefs -Woverloaded-virtual -fsigned-char -fPIC -pthread -std=c++11 -Wno-deprecated-declarations $IncludePath $SourceFiles ; g++ $ObjectFiles -shared  $LinkedLibs -o $SharedLib
Info in <TUnixSystem::ACLiC>: creating shared library /eos/home-l/leyan/HSCP2024/HSCP_AN17_192/CMSSW_8_0_30/SUSYBSMAnalysis/HSCP/test/AnalysisCode/Analysis_Step2_BackgroundPrediction_C.so
mv: cannot stat 'HscpPred*': No such file or directory
MERGING FILE AND PREDICTING BACKGROUNDS
Compiling the Macro...
Getting the jobs...
['ROOT', '/eos/home-l/leyan/HSCP2024/HSCP_AN17_192/CMSSW_8_0_30/SUSYBSMAnalysis/HSCP/test/AnalysisCode/Analysis_Step2_BackgroundPrediction.C', '"Results/Type0/"']
['ROOT', '/eos/home-l/leyan/HSCP2024/HSCP_AN17_192/CMSSW_8_0_30/SUSYBSMAnalysis/HSCP/test/AnalysisCode/Analysis_Step2_BackgroundPrediction.C', '"Results/Type2/"']
